[workspace]
members = ["crate/celler", "crate/cli", "crate/libs/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["sparkzky"]

[workspace.dependencies]
# System libraries
libc = "0.2.94"
lazy_static = "1.3.0"
nix = "0.26.4"
anyhow = "1"

capctl = "0.2.0"
scan_fmt = "0.2.6"

protobuf = "3.7.2"

# Async runtime
tokio = { version = "1.46.1", features = ["full"] }
tokio-vsock = "0.3.4"

# Async Helpers
futures = "0.3.30"
async-trait = "0.1.50"
async-recursion = "0.3.2"

# Configuration
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.39"
toml = "0.5.8"
regex = "1.10.5"
scopeguard = "1.0.0"
tempfile = "3.19.1"

# Container
oci-spec = { version = "0.8.1", features = ["runtime"] }
caps = "0.5.0"
cgroups = { package = "cgroups-rs", git = "https://github.com/kata-containers/cgroups-rs", rev = "v0.3.5" }

# Log
slog = "2.5.2"
slog-scope = "4.1.2"
slog-term = "2.9.0"

serial_test = "0.10.0"

