[package]
name = "celler"
version.workspace = true
edition.workspace = true

[dependencies]
awaitgroup = "0.6.0"

libc.workspace = true
lazy_static.workspace = true
nix.workspace = true
anyhow.workspace = true
protobuf.workspace = true
scopeguard.workspace = true

# Async runtime
tokio.workspace = true
tokio-vsock.workspace = true

# Async Helpers
futures.workspace = true
async-trait.workspace = true
async-recursion.workspace = true

# Configuration
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
regex.workspace = true

tempfile.workspace = true

# Container
oci-spec.workspace = true
caps.workspace = true
cgroups.workspace = true

# Log
slog.workspace = true
slog-scope.workspace = true
slog-term.workspace = true

# Secure computing
libseccomp = { version = "0.3.0", optional = true }

test-utils = { path = "../libs/test-utils" }
protocols = { path = "../libs/protocols" }

[dev-dependencies]
serial_test.workspace = true

[features]
seccomp = ["libseccomp"]
standard-oci-runtime = []

