[package]
name = "kata-types"
version = "0.1.0"
description = "Constants and data types shared by Kata Containers components"
keywords = ["kata", "container", "runtime"]
authors = ["The Kata Containers community <kata-dev@lists.katacontainers.io>"]
repository = "https://github.com/kata-containers/kata-containers.git"
homepage = "https://katacontainers.io/"
readme = "README.md"
license = "Apache-2.0"

edition.workspace = true

[dependencies]
anyhow.workspace = true
lazy_static.workspace = true
regex.workspace = true
serde.workspace = true
slog.workspace = true
slog-scope.workspace = true

bitmask-enum = "2.1.0"
base64 = "0.13.0"
byte-unit = "5.1.6"
glob = "0.3.0"
num_cpus = "1.13.1"
serde_json = "1.0.73"
thiserror = "1.0"
toml = "0.5.8"
serde-enum-str = "0.4"
sysinfo = "0.34.2"
sha2 = "0.10.8"
flate2 = { version = "1.0", features = ["zlib"] }
hex = "0.4"

oci-spec = { version = "0.8.1", features = ["runtime"] }

safe-path = { path = "../safe-path", optional = true }


[dev-dependencies]
tempfile = "3.19.1"
test-utils = { path = "../test-utils" }
nix.workspace = true


[features]
default = []
enable-vendor = []
safe-path = ["dep:safe-path"] # safe-path is platform-specific
